--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -2,10 +2,16 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name %>
+        
+      
+          <%= f.input :name %>
     <%= f.input :price_cost %>
     <%= f.input :percentaje %>
     <%= f.input :price_total %>
+    <%= f.input :quantity %>
+    <%= f.input :barcode %>
+    <%= f.input :articles_code_supplier %>
+    <%= f.input :supplier_id %>
   </div>
 
   <div class="form-actions">
