--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,42 @@
-<h1>Listing articles</h1>
+<div class="row" >
+     <div class="span12">
+         <% if flash[:error] %>
+             <li class="alert alert-error"><%= flash[:error]  %></li>
+         <% end %>
+         <% if notice %>
+             <li class="alert alert-success"><%= notice  %></li>
+         <% end %>
+      </div>
+    <div class="span3 side articulo">
+         <%= simple_form_for '', method: 'get' do |f| %>
+            <div class="search">
+              <%= f.input( :q, label: 'Articulos', input_html: { 
+                          data: {'autocomplete-field' => true,
+                                  'autocomplete-for' => '#_article_id',
+                                  'autocomplete-url' => articles_path(format: :json)
+                                } 
+                              }) %>
+              <%= f.input :article_id, as: :hidden%>
+            </div>
+          <% end %> 
+  </div>
+  <div class="span8 section">
 
+    <div class="title">
+        <h2>Listado de Articulos</h2>
+    </div>
+
+
+
+<div class="row">
+        <div class="span12">
+                
+        </div>
+</div>
+
+
+
+<% if @articles %>
 <table class="table">
   <tr>
     <th>Name</th>
@@ -35,7 +72,9 @@
   </tr>
 <% end %>
 </table>
-
+<% end %>
 <br />
 
 <%= link_to 'New Article', new_article_path %>
+
+</div>
