--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,5 +1,5 @@
 <fieldset class="fields">
-  <table>
+  <table class="table order">
           <tr>
                   <td> <%= f.input( :name, input_html: { 
                         data: {'autocomplete-field' => true,
@@ -10,7 +10,7 @@
           <td> <%= f.input :articles_id, as: :hidden%></td>
           <td> <%= f.input :quantity, :input_html => {:class => "input-small quantity"}  %></td>
           <td> <%= f.input :unit_price, :input_html => {:class => "input-small"}  %></td>
-          <td>        <%= f.input :price_total , :input_html => {:class => "input-small price_subtotal"} %></td>
+          <td> <%= f.input :price_total , :input_html => {:class => "input-small price_subtotal"} %></td>
         
         <%= f.hidden_field :_destroy %>
         <td><%= link_to "remove", '#', class: "remove_fields_orders" %></td>
