--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,20 +1,33 @@
 <%= simple_form_for(@article) do |f| %>
-  <%= f.error_notification %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-        
-      
-          <%= f.input :name %>
-    <%= f.input :price_cost %>
-    <%= f.input :percentaje %>
-    <%= f.input :price_total %>
-    <%= f.input :quantity %>
-    <%= f.input :barcode %>
-    <%= f.input :articles_code_supplier %>
-    <%= f.input :supplier_id %>
-  </div>
+        <div class="form-inputs">
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+                <div class="span12">
+                        <div class="span5">
+                                <%= f.label :Nombre %>
+                                <%= f.text_field :name %>
+                                <%= f.input :price_cost, label: "Precio de Costo" %>
+                                <%= f.input :percentaje, label: "Porcentaje" %>
+                                <%= f.input :price_total, label: "Precio total" %>
+                                <%= f.input :quantity, label: "Cantidad" %>
+                        </div>       
+                        <div class = "span6">
+                                <%= f.input :barcode, label: "Codigo de Barra" %>
+                                <%= f.input :articles_code_supplier, label: "Codigo Articulo Proveedor" %>
+                                <%= f.label "Proovedor" %>
+                                <%= f.collection_select :supplier_id, Supplier.order(:name), :id, :name %>
+                                o crea un
+                                <%= f.text_field :new_supplier  %><br>
+                                <%= f.label "Categoria" %>
+                                <%= f.collection_select :category_id, Category.order(:name), :id, :name %>
+                                o crea una
+                                <%= f.text_field :new_category  %>
+                        </div>
+                </div>
+        </div>
+</div>
+<div class="form-actions">
+        <%= f.button :submit %>
+</div>
 <% end %>
