--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -46,10 +46,6 @@
     <th>Cantidad</th>
     <th>Proveedor </th>
     <th>codigo Proveedor </th>
-
-
-
-
     <th></th>
     <th></th>
     <th></th>
@@ -75,6 +71,6 @@
 <% end %>
 <br />
 
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'Nuevo Articulo', new_article_path %>
 
 </div>
