--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -10,7 +10,7 @@
     <div class="span3 side">
          <%= simple_form_for '', method: 'get' do |f| %>
             <div class="search">
-              <%= f.input( :q, label: 'customers', input_html: { 
+              <%= f.input( :q, label: 'Clientes', input_html: { 
                           data: {'autocomplete-field' => true,
                                   'autocomplete-for' => '#_customer_id',
                                   'autocomplete-url' => customers_path(format: :json)
