--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,25 +1,25 @@
 <%= simple_form_for [@customer, @invoice] do |f| %>
         <%= f.error_notification %>
         <div class="row-fluid"> 
-          <div class="span12 section ">
+                <div class="section">
+                        <div class="container-fluid">
+                                <%= f.fields_for :orders, method: 'get' do |ph| %>
+                                        <%=render 'orders', f: ph  %>
+                                        <%= link_to_add_fields 'add', f , :orders %>
+                                <% end %>
+                                <div class ="total">
+                                        <%=f.input :price_total %>
+                                </div>
 
-                <%= f.fields_for :orders, method: 'get' do |ph| %>
-                        <%=render 'orders', f: ph  %>
-                        <%= link_to_add_fields 'add', f , :orders %>
-                <% end %>
+                                <%= f.fields_for :payments, method: 'get' do |pay| %>
+                                        <%= render 'payments', f: pay %>
+                                        <%= link_to_add_fields 'add', f , :payments %>
+                                <% end %>
+                                <div class="form-actions">
+                                        <%= f.button :submit %>
+                                </div>
 
-                <div class ="total">
-                        <%=f.input :price_total %>
-                 </div>
- 
-                <%= f.fields_for :payments, method: 'get' do |pay| %>
-                        <%= render 'payments', f: pay %>
-                        <%= link_to_add_fields 'add', f , :payments %>
-                 <% end %>
-                 <div class="form-actions">
-                        <%= f.button :submit %>
+                        </div>
                 </div>
-
-        </div>
         </div>
 <% end %>
