--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -14,18 +14,18 @@
         <ul class="nav">
           <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Configuración<b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Localities",locations_path%> </li>
-            <li><%= link_to "Suppliers",suppliers_path%> </li>
+            <li><%= link_to "Localidades",locations_path%> </li>
+            <li><%= link_to "Proovedores",suppliers_path%> </li>
              <li class="dropdown-submenu"> 
               <a href="#">Equipos</a>
                 <ul class="dropdown-menu">
-                      <li><%= link_to "Makes",makes_path%> </li>
-                      <li><%= link_to "Models",models_path%> </li>
-                      <li><%= link_to "Categories",categories_path%> </li>
+                      <li><%= link_to "Marcas",makes_path%> </li>
+                      <li><%= link_to "Modelos",models_path%> </li>
+                      <li><%= link_to "Categorias",categories_path%> </li>
 
                 </ul>
              </li>
-            <li><%= link_to "Users",users_path%> </li>
+            <li><%= link_to "Usuarios",users_path%> </li>
           </ul>
           </li>
         </ul>
