--- a/app/assets/stylesheets/invoices.css.scss
+++ b/app/assets/stylesheets/invoices.css.scss
@@ -1,3 +1,31 @@
-// Place all the styles related to the invoices controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+
+.section2
+{
+  height: 430px;
+  width: 22%;
+  float: left;
+  top: 27%;
+  position: absolute
+  // border: 1px solid #E1E1E1;
+ // padding: 3px;
+}
+
+.total_1{
+
+  background: yellow;
+  float: right;
+  width: 15%; 
+}
+.total_1, input{
+
+  font-size: 50px;
+  position: static;
+}
+
+.pagos
+{
+
+  background: blue;
+  float: right;
+  width: 15%; 
+}
