--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,6 +13,7 @@
  *= require twitter/bootstrap-responsive
  *= require login
  *= require customers
+ *= require invoices
  *= require footer
  *= require jquery/ui-custom
  *= require_tree .
