--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,18 +1,19 @@
 <fieldset class="fields">
-  <table class="table order">
+        <table class="order">
           <tr>
-                  <td> <%= f.input( :name, input_html: { 
+                  <td> <%= f.input( :name, label: false, input_html: { 
                         data: {'autocomplete-field' => true,
                                'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
                                'autocomplete-url' => articles_path(format: :json)
                 } 
                   }) %></td>
-          <td> <%= f.input :articles_id, as: :hidden%></td>
-          <td> <%= f.input :quantity, :input_html => {:class => "input-small quantity"}  %><%=f.input :quantity_stock %> </td>
-          <td> <%= f.input :unit_price, :input_html => {:class => "input-small"}  %></td>
-          <td> <%= f.input :price_total , :input_html => {:class => "input-small price_subtotal"} %></td>
+          <td> <%= f.input :articles_id, as: :hidden , label: false%></td>
+          <td> <%= f.input :quantity_stock, as: :hidden , label: false%></td>
+          <td> <%= f.input :quantity, label: false, :input_html => {:class => "input-small quantity"}  %> </td>
+          <td> <%= f.input :unit_price, label: false, :input_html => {:class => "input-small"}  %></td>
+          <td> <%= f.input :price_total, label: false, :input_html => {:class => "input-small price_subtotal"} %></td>
         
-        <%= f.hidden_field :_destroy %>
+          <td><%= f.hidden_field :_destroy %></td>
         <td><%= button_to "remove", '#', class: "remove_fields_orders btn btn-danger" %></td>
 </tr>
   </table>
