--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -15,6 +15,7 @@
                                                                 <th>Articulo</th>
                                                                 <th>Cantidad</th>
                                                                 <th>Precio Unit</th>
+                                                                <th>Descuento</th>
                                                                 <th>Precio Total</th>
                                                         </tr>
                                                 </table>
