--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -11,6 +11,7 @@
           <td> <%= f.input :quantity_stock, as: :hidden , label: false%></td>
           <td> <%= f.input :quantity, label: false, :input_html => {:class => "input-small quantity"}  %> </td>
           <td> <%= f.input :unit_price, label: false, :input_html => {:class => "input-small"}  %></td>
+          <td> <%= f.input :discount, label: false, :input_html => {:class => "input-small"}  %></td>
           <td> <%= f.input :price_total, label: false, :input_html => {:class => "input-small price_subtotal"} %></td>
         
           <td><%= f.hidden_field :_destroy %></td>
