arreglos en customer

--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,8 @@
-<h2>Nuevo Artículo</h2>
+<div class="section_complete">
 
-<%= render 'form' %>
-
+        <h2>Nuevo Artículo</h2>
+        <div class="data">
+                <%= render 'form' %>
+        </div>
+</div>
 <%= link_to 'Back', articles_path %>
