--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,9 +1,11 @@
 <%= simple_form_for(@article) do |f| %>
         <%= f.error_notification %>
-
+<div class="container">
         <div class="form-inputs">
-                <div class="section_complete">
-                        <div class="span12">
+   <div class="row-fluid">
+           
+
+                <div class="span12">
                                 <div class="span5">
                                         <%= f.input :name, label: "Nombre" %>
                                         <%= f.input :price_cost, label: "Precio de Costo" %>
@@ -32,12 +34,13 @@
                                         o crea una
                                         <%= f.text_field :new_category  %>
                                 </div>
-                        </div>
                 </div>
         </div>
         <div class="form-actions">
                 <%= f.button :submit %>
         </div>
 
+</div>
+   </div>
 </div>
 <% end %>
