--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -8,18 +8,14 @@
               <%= f.input :name %>
               <%= f.input :lastname %>
               <%= f.input :address %>
-              <%= f.input :cuit %>
-              <%= f.input :dni %>
+
             </div>
             <div class ="span5">
-              <%= f.label :lenguaje %>
-                <ul>
-                  <li><%= link_to_unless_current "English", locale: "en" %></li>
-                  <li><%= link_to_unless_current "spanish", locale: "es" %></li>
-              </ul>
-              <%= f.input :role_id do    %>
-              <% f.select :role_id, Role.order("role").map {|l|[l.role, l.id]}, prompt: "Elija un rol"   %>
-              <% end %>
+                    
+              <%= f.input :cuit %>
+              <%= f.input :dni %>
+                    
+              <%= f.select :role, User::ROLE  %>
               <%= f.input :password %>
               <%= f.input :password_confirmation%>
               <%= f.input :enabled %>
