--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,7 @@
  *= require login
  *= require customers
  *= require invoices
+ *= require articles
  *= require footer
  *= require jquery/ui-custom
  *= require_tree .
