--- a/app/views/invoices/_orders.html.erb
+++ b/app/views/invoices/_orders.html.erb
@@ -1,21 +1,20 @@
-<fieldset class="fields">
-        <table class="order">
-          <tr>
-                  <td> <%= f.input( :name, label: false, input_html: { 
+        
+                                <table class="table">
+<tr >
+<td> <%= f.input( :name, label: false, input_html: { 
                         data: {'autocomplete-field' => true,
                                'autocomplete-for' => '#invoice_orders_#{id}_articles_id',
                                'autocomplete-url' => articles_path(format: :json)
                 } 
-                  }) %></td>
-          <td> <%= f.input :articles_id, as: :hidden , label: false%></td>
-          <td> <%= f.input :quantity_stock, as: :hidden , label: false%></td>
-          <td> <%= f.input :quantity, label: false, :input_html => {:class => "input-small quantity"}  %> </td>
+                  }) %>
+           <%= f.input :articles_id, as: :hidden , label: false%>
+           <%= f.input :quantity_stock, as: :hidden , label: false%></td>
+           <td> <%= f.input :quantity, label: false, :input_html => {:class => "input-small quantity"}  %> </td>
           <td> <%= f.input :unit_price, label: false, :input_html => {:class => "input-small"}  %></td>
           <td> <%= f.input :discount, label: false, :input_html => {:class => "input-small discount"}  %></td>
           <td> <%= f.input :price_total, label: false, :input_html => {:class => "input-small price_subtotal"} %></td>
         
           <td><%= f.hidden_field :_destroy %></td>
-        <td><%= button_to "remove", '#', class: "remove_fields_orders btn btn-danger" %></td>
-</tr>
-  </table>
-</fieldset>
+          <td><%= button_to "remove", '#', class: "remove_fields_orders btn btn-danger" %></td>
+  </tr>
+</table>
