--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -18,20 +18,31 @@
                               }) %>
               <%= f.input :article_id, as: :hidden%>
             </div>
-          <% end %> 
-  </div>
-  <div class="span8 section">
+<div class="search">
+       <%= f.collection_select :supplier_id, Supplier.order(:name), :id, :name %>
+</div>
 
+    <% end %> 
+
+
+
+  </div>
+
+    
+
+
+  <div class="span8 section">
     <div class="title">
         <h2>Listado de Articulos</h2>
     </div>
 
 <% if @articles %>
-        
  
        <table class="table">
   <tr>
+    <th class="center">Cod</th>
     <th class="center">Nombre</th>
+    <th class="center">Proveedor</th>
     <th class="label label-info span2i center">Precio Publico</th>
     <th class="center">Stock</th>
     <th></th>
@@ -41,21 +52,19 @@
 
 <% @articles.each do |article| %>
   <tr>
+    <td class="span4"><%= article.barcode %></td>
     <td class="span4"><%= article.name %></td>
+    <td class="span4"><%= article.supplier.name %></td>
     <td class="label label-info span2 center"><%= number_to_currency(article.price_total) %></td>
     <td class="center span2"><%= article.quantity %></td>
    <% if can? :show, @articles %>
            <td class="span1"><%= link_to 'Ver', article %></td>
            <td class="span1"><%= link_to 'Editar', edit_article_path(article) %></td>
    <% end %>
-
-
+   <% end %>
   </tr>
-<% end %>
 </table>
 <% end %>
 <br />
 <%= link_to 'Nuevo Articulo', new_article_path %>
-
-
 </div>
