--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -38,8 +38,8 @@
                                         </tr>
                                 </div>
 
-                                <div class ="total_1 pull-right">
-                                        <h2> <%= f.label "Total" %></h2>
+                                <div class ="total_1 pull-right h2">
+                                        <h2>  Total</h2>
                                         <h2><%=f.input :price_total, label: false, :input_html=> {class: "input-small"}, readonly: true %></h2>
                                 </div>
                                 <br>
