--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -4,24 +4,34 @@
 <table class="table">
   <tr>
     <th>Remito</th>
+    <th>Fecha</th>
     <th>Price total</th>
     <th>Pagado</th>
+    <th>Total</th>
     <th>Cuenta corriente</th>
+    <th>Estado Cta cte</th>
     <th></th>
   </tr>
 
 <% @invoices.each do |invoice| %>
   <tr>
     <td><%= invoice.id %></td>
+    <td><%= invoice.created_at.strftime("%d/%m/%Y") %></td>
     <td><%= invoice.price_total %></td>
     <td><%=  Invoice.sum_pay(invoice.id) %></td>
-    <td><%=  invoice.current_account ? 'Si' : 'No' %></td>
+    <td></td>
+    <td><%=  invoice.current_account ? 'Si' : 'No' %> </td>
+    <td> <%= invoice.cancelar_invoice ? "  <b> 'Cancelado' </b> ": 'No Cancelado' if invoice.current_account == true %></td>
+
     <td><%= link_to "Editar", edit_customer_invoice_path(invoice.customer_id, invoice) %></td>
     <td><%= link_to "Imprimir", customer_invoice_path(invoice.customer_id, invoice, format: "pdf") %></td>
-  </tr>
+  
+    <td><%= link_to "Cancelar", customer_invoice_cancelar_path(invoice.customer_id, invoice) %></td>
+    </itr>
 <% end %>
 
         <tr>
+                  <td></td>
                   <td></td>
                   <td><b><%= number_to_currency(@amount) %></b></td>
                   <td><b><%= number_to_currency(@payments) %></b></td>
