--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -3,7 +3,7 @@
         <div> 
                 <div class="side">
 
-                        <h4> Cliente: <%= @customer.name + ", " + @customer.lastname %></h4>
+                        <h4> Clientesss: <%= @customer.name + ", " + @customer.lastname %></h4>
 
                         <div class="span2">
                                 <%= f.input :current_account,  label: "Cuenta corriente"%>
@@ -20,7 +20,7 @@
 
                                         <tr>
                                                 <th class="span2">Articulos</th>
-                                                <th class="span2">Cantidad</th>
+                                                <th class="span2">Cantidaaaaaaaad</th>
                                                 <th class="span1">Precio Unit</th>
                                                 <th class="span1">Descuento</th>
                                                 <th class="span1">Precio Total</th>
